compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case19.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 634
expression: "case [1] { [x] | x -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ case [1] { [x] | x -> 1 }
  │                  ^

Expected type:

    Int

Found type:

    List(Int)


